--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>5.1_vazifa</title>
   </head>
   <body>
-    <!-- <h1>5oy 1-dars vazifa</h1> -->
+    <h1>5oy 1-dars vazifa</h1>
+    <h2 id="title"></h2>
     <!-- <h2 id="title">DOM</h2>
     <ul>
       <li class="List-item">HTML</li>
@@ -23,7 +24,7 @@
     <p class="error">Lorem, ipsum.</p> -->
     
     
-    <h1 style="color:orange">The DOM</h1>
+    <!-- <h1 style="color:orange">The DOM</h1> -->
     <script src="./app.js"></script>
   </body>
 </html>
